# optional

./: .gitignore  CHANGELOG.md  Makefile.am  NOTICE  README.md  clib.json  configure.ac  optional.pc.in  sonar-project.properties
.github/workflows/: build.yml  docs.yml  release.yml
docs/: Doxyfile  README.md  license.md  optional-library.css
examples/: application.c  example.c  pet-store.c  pet-store.h
src/: optional.h
tests/: optional_empty.c  optional_filter_falsy.c  optional_filter_null.c  optional_filter_using_functions.c  optional_filter_using_macros.c  optional_flat_map_using_functions.c  optional_flat_map_using_macros.c  optional_get_value.c  optional_if_present_or_else_using_functions.c  optional_if_present_or_else_using_macros.c  optional_if_present_using_functions.c  optional_if_present_using_macros.c  optional_is_empty.c  optional_is_present.c  optional_map_using_functions.c  optional_map_using_macros.c  optional_of_nullable.c  optional_of_possibly_falsy.c  optional_or.c  optional_or_else.c  optional_present.c  optional_use_value.c  test.h
